change pg-migrate fast option

--- a/modules/installation-and-upgrade/pages/db-migration-xy.adoc
+++ b/modules/installation-and-upgrade/pages/db-migration-xy.adoc
@@ -96,7 +96,7 @@ If the upgrade fails, the migration script will attempt to restore the database 
   Run the script.
 +
 ----
-/usr/lib/susemanager/bin/pg-migrate-x-to-y.sh fast
+/usr/lib/susemanager/bin/pg-migrate-x-to-y.sh -f
 ----
 . When the upgrade has successfully completed, you can safely delete the old database directory and reclaim lost disk space.
   The old directory is renamed to [path]``/var/lib/pgsql/data-pg12`` or [path]``/var/lib/pgsql/data-pg10``, depending on the version you started from.
