Remove boot prefix from dhcp example

--- a/modules/retail/pages/containerized-saltboot.adoc
+++ b/modules/retail/pages/containerized-saltboot.adoc
@@ -103,11 +103,11 @@ Add following to the subnet configuration of your DHCP server:
   }
   else {
     if option arch = 00:07 {
-       filename "boot/grub.efi";
+       filename "grub.efi";
        next-server <IP address of containerized proxy>;
     }
     else {
-      filename "boot/pxelinux.0";
+      filename "pxelinux.0";
       next-server <IP address of containerized proxy>;
     }
   }
