--- a/modules/client-configuration/pages/clients-ubuntu-old.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu-old.adoc
@@ -213,8 +213,9 @@ endif::[]
 
 == Root Access
 
-The root user on {ubuntu} is disabled by default.
-You can enable it by editing the [filename]``sudoers`` file.
+The root user on {ubuntu} is disabled by default for SSH access.
+
+To be able to onboard using a regular user, you need to edit the [filename]``sudoers`` file.
 
 .Procedure: Granting Root User Access
 
@@ -228,7 +229,7 @@ Grant [command]``sudo`` access to the user by adding this line at the end of the
 Replace [systemitem]``<user>`` with the name of the user that is bootstrapping the client in the {webui}:
 +
 ----
-<user>  ALL=NOPASSWD: /usr/bin/python, /usr/bin/python2, /usr/bin/python3
+<user>  ALL=NOPASSWD: /usr/bin/python, /usr/bin/python2, /usr/bin/python3, /var/tmp/venv-salt-minion/bin/python
 ----
 
 [NOTE]
