Add documentation for openEuler clients (draft, WIP)

--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -22,6 +22,7 @@ endif::[]
 *** xref:supported-features-amazon.adoc[Amazon Linux Supported Features]
 *** xref:supported-features-centos.adoc[CentOS Supported Features]
 *** xref:supported-features-debian.adoc[Debian Supported Features]
+*** xref:supported-features-openeuler.adoc[OpenEuler Supported Features]
 *** xref:supported-features-oracle.adoc[Oracle Supported Features]
 *** xref:supported-features-rh.adoc[Red Hat Supported Features]
 *** xref:supported-features-rocky.adoc[Rocky Linux Supported Features]
@@ -78,6 +79,9 @@ endif::[]
 // Debian Client Registration
 *** xref:registration-overview-debian.adoc[Debian Client Registration]
 **** xref:clients-debian.adoc[Debian Clients]
+// OpenEuler Client Registration
+*** xref:registration-overview-openeuler.adoc[OpenEuler Client Registration]
+**** xref:clients-openeuler.adoc[OpenEuler Clients]
 // Oracle Client Registration
 *** xref:registration-overview-oracle.adoc[Oracle Client Registration]
 **** xref:clients-oracle.adoc[Oracle Clients]
