Add documentation for openEuler clients (draft, WIP)

--- a/modules/snippets/pages/supported-client-systems-snippet.adoc
+++ b/modules/snippets/pages/supported-client-systems-snippet.adoc
@@ -220,6 +220,11 @@ ifeval::[{uyuni-content} == true]
 | {cross}
 | {check}
 
+| {openeuler} 22.03
+| {x86_64}, {aarch64}
+| {cross}
+| {check}
+
 | {oracle} 8
 | {x86_64}, {aarch64}
 | {cross}
