--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -108,7 +108,9 @@ This command performs a number of tests on the provided files to test if they ar
 . Restart services to pick up the changes:
 +
 ----
-spacewalk-service restart
+spacewalk-service stop
+systemctl restart postgresql.service
+spacewalk-service start
 ----
 
 . Update the database with the new CA:
@@ -118,6 +120,8 @@ spacewalk-service restart
 ----
 
 If you are using a proxy, you need to generate a server certificate RPM for each proxy, using their host names and cnames.
+You should use `mgr-ssl-cert-setup` also on a {productname} Proxy to replace the certificates. As the {productname} Proxy
+does not have a postgresql database, only a `spacewalk-service restart` is sufficient.
 
 If the Root CA was changed, it needs to get deployed to all the clients connected to {productname}.
 
