Single Tshoot: moved all files to separate subfolder in admin guide (#1642)
* Moved all tshooting files to separate subfolderin admin guide, including files from other books.

* New nav bar commented out during WIP.

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -100,6 +100,38 @@ endif::[]
 *** xref:tshoot-saltboot.adoc[Troubleshooting Saltboot]
 *** xref:tshoot-sync.adoc[Troubleshooting Synchronization]
 *** xref:tshoot-taskomatic.adoc[Troubleshooting Taskomatic]
+// Troubleshooting - always keep as the last chapter
+// THIS WILL BE USED TO TEST DOCS BUILDING, BUT WILL BE
+// HIDDEN UNTIL READY TO BE COMPLETELY MERGED
+//** xref:tshoot-intro-NEW.adoc[Troubleshooting MOVE IT]
+//*** xref:troubleshooting/tshoot-corruptrepo.adoc[Troubleshooting Corrupt Repositories]
+//*** xref:troubleshooting/tshoot-custom-channel.adoc[Troubleshooting Custom Channel]
+//*** xref:troubleshooting/tshoot-diskspace.adoc[Troubleshooting Disk Space]
+//*** xref:troubleshooting/tshoot-firewalls.adoc[Troubleshooting Firewalls]
+//*** xref:troubleshooting/tshoot-highsynctimesoverwan.adoc[Troubleshooting high sync times over WAN]
+//*** xref:troubleshooting/tshoot-inactiveclients.adoc[Troubleshooting Inactive Clients]
+//*** xref:troubleshooting/tshoot-iss.adoc[Troubleshooting Inter-Server Synchronization]
+//*** xref:troubleshooting/tshoot-localcert.adoc[Troubleshooting Local Certificates]
+//*** xref:troubleshooting/tshoot-logintimeout.adoc[Troubleshooting Login Timeout]
+//*** xref:troubleshooting/tshoot-notifications.adoc[Troubleshooting Notifications]
+//*** xref:troubleshooting/tshoot-osadjabberd.adoc[Troubleshooting OSAD and jabberd]
+//*** xref:troubleshooting/tshoot-packages.adoc[Troubleshooting Packages]
+//*** xref:troubleshooting/tshoot-registerclones.adoc[Troubleshooting Registering Cloned Clients]
+//*** xref:troubleshooting/tshoot-registertradrhel.adoc[Troubleshooting Registering Traditional RHEL Clients]
+//*** xref:troubleshooting/tshoot-hostname-rename.adoc[Troubleshooting Renaming the Server]
+//*** xref:troubleshooting/tshoot-rpctimeout.adoc[Troubleshooting RPC Timeouts]
+//*** xref:troubleshooting/tshoot-saltboot.adoc[Troubleshooting Saltboot]
+//*** xref:troubleshooting/tshoot-sync.adoc[Troubleshooting Synchronization]
+//*** xref:troubleshooting/tshoot-taskomatic.adoc[Troubleshooting Taskomatic]
+// From Client Config Guide Tshooting
+// started as single file
+// needs to be reorganized to smaller ones, one topic per file
+//*** xref:troubleshooting/tshoot-clients.adoc[Moving here Tshoot Clients before splitting it]
+// From Install & Upgrade Guide Tshooting
+// started as single file
+// needs to be reorganized to smaller ones, one topic per file
+//*** xref:troubleshooting/troubleshooting.adoc[Moving here Tshoot Install&Upgrade before splitting it]
+
 
 ifdef::backend-pdf[]
 include::modules/ROOT/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
