--- a/modules/administration/pages/custom-channels.adoc
+++ b/modules/administration/pages/custom-channels.adoc
@@ -4,17 +4,16 @@
 Custom channels give you the ability to create your own software packages and repositories, which you can use to update your clients.
 They also allow you to use software provided by third party vendors in your environment.
 
-You must have administrator privileges to be able to create and manage custom channels.
-
-Before you create a custom channel, determine which base channel you want to associate it with, and which repositories you want to use for content.
-
 This section gives more detail on how to create, administer, and delete custom channels.
+You must have administrator privileges to be able to create and manage custom channels.
 
 
 
 == Creating Custom Channels and Repositories
 
-If you have custom software packages that you need to install on your {productname} systems, you can create a custom child channel to manage them.
+Before you create a custom channel, determine which base channel you want to associate it with, and which repositories you want to use for content.
+
+If you have custom software packages that you need to install on your client systems, you can create a custom child channel to manage them.
 You need to create the channel in the {productname} {webui} and create a repository for the packages, before assigning the channel to your systems.
 
 You can select a vendor channel as the base channel if you want to use packages provided by a vendor.
@@ -83,8 +82,12 @@ For more information, see the  man pages for [literal]``createrepo_c`` and [lite
 . Assign your new repository to your custom channel by navigating to menu:Software[Manage > Channels], clicking the name of your newly created custom channel, and navigating to the [guimenu]``Repositories`` tab.
 . Ensure the repository you want to assign to the channel is checked, and click btn:[Update Repositories].
 . Navigate to the [guimenu]``Sync`` tab and click btn:[Sync Now] to synchronize immediately.
-    You can also set an automated synchronization schedule on this tab.
 
+[NOTE]
+====
+You can also set an automated synchronization schedule on this [guimenu]``Repositories`` tab.
+To avoid missing important updates {suse} recommends to configure a [guimenu]``Schedule`` to synchronize regularly.
+====
 
 There are several ways to check if a channel has finished synchronizing:
 
