Fix issue 1644 (salt bundle extra info)

--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -28,6 +28,9 @@ Bootstrapping with {webui} is using Salt Bundle as well, so bootstrapping with {
 Using the Salt Bundle, it is no longer needed that the client provides any Python interpreter or modules.
 
 Before bootstrapping new client you need to include [package]``venv-salt-minion`` to the bootstrap repository relevant to the client with explicitly specifying [package]``venv-salt-minion`` as an additionall package on calling [command]``mgr-create-bootstrap-repo``.
+----
+mgr-create-bootstrap-repo -c DISTRIBUTION_LABEL venv-salt-minion
+----
 You can switch existing clients to the Salt Bundle method.
 If you switch, the [package]``salt-minion`` package and its dependencies will stay installed.
 
@@ -87,9 +90,13 @@ The Python 3 deployed with the Bundle is used to handle Salt SSH session on the 
 [IMPORTANT]
 ====
 {productname} 4.2 is not using the Salt Bundle to for Salt SSH (including bootstrapping with {webui}) by-default.
-To enable the Salt Bundle with Salt SSH support the following parameter need to be specified in [path]``/etc/rhn/rhn.conf``:
+To enable the Salt Bundle with Salt SSH support the following parameter needs to be specified in [path]``/etc/rhn/rhn.conf``:
 ----
 web.ssh_salt_pre_flight_script = /usr/share/susemanager/salt-ssh/preflight.sh
+----
+To prevent using salt thin on managing Salt SSH actions the following parameter needs to be specified in [path]``/etc/rhn/rhn.conf``:
+----
+web.ssh_use_salt_thin = false
 ----
 ====
 
