--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -134,11 +134,11 @@ endif::[]
 // needs to be reorganized to smaller ones, one topic per file
 //*** xref:troubleshooting/troubleshooting.adoc[Moving here Tshoot Install&Upgrade before splitting it]
 // AFTER REORGANIZING
-*** xref:troubleshooting/tshoot-notenoughdiskspace.adoc[Not Enough Disk Space]
-*** xref:troubleshooting/tshoot-retryinsdetuptargetsystem.adoc[Retrying to Set up the Target System]
-*** xref:troubleshooting/tshoot-schemaupgradefails.adoc[Schema Upgrade Fails]
-*** xref:troubleshooting/tshoot-webuifailstoload.adoc[{webui} Fails to Load]
-*** xref:troubleshooting/tshoot-registeringtradassaltafterdeleting.adoc[Registering a traditional client as Salt minion after deleting it]
+//*** xref:troubleshooting/tshoot-notenoughdiskspace.adoc[Not Enough Disk Space]
+//*** xref:troubleshooting/tshoot-retryinsdetuptargetsystem.adoc[Retrying to Set up the Target System]
+//*** xref:troubleshooting/tshoot-schemaupgradefails.adoc[Schema Upgrade Fails]
+//*** xref:troubleshooting/tshoot-webuifailstoload.adoc[{webui} Fails to Load]
+//*** xref:troubleshooting/tshoot-registeringtradassaltafterdeleting.adoc[Registering a traditional client as Salt minion after deleting it]
 
 ifdef::backend-pdf[]
 include::modules/ROOT/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
