--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -103,7 +103,7 @@ endif::[]
 // Troubleshooting - always keep as the last chapter
 // THIS WILL BE USED TO TEST DOCS BUILDING, BUT WILL BE
 // HIDDEN UNTIL READY TO BE COMPLETELY MERGED
-//** xref:tshoot-intro-NEW.adoc[Troubleshooting MOVE IT]
+** xref:tshoot-intro-NEW.adoc[Troubleshooting MOVE IT]
 //*** xref:troubleshooting/tshoot-corruptrepo.adoc[Troubleshooting Corrupt Repositories]
 //*** xref:troubleshooting/tshoot-custom-channel.adoc[Troubleshooting Custom Channel]
 //*** xref:troubleshooting/tshoot-diskspace.adoc[Troubleshooting Disk Space]
@@ -123,10 +123,22 @@ endif::[]
 //*** xref:troubleshooting/tshoot-saltboot.adoc[Troubleshooting Saltboot]
 //*** xref:troubleshooting/tshoot-sync.adoc[Troubleshooting Synchronization]
 //*** xref:troubleshooting/tshoot-taskomatic.adoc[Troubleshooting Taskomatic]
+//
 // From Client Config Guide Tshooting
 // started as single file
 // needs to be reorganized to smaller ones, one topic per file
 //*** xref:troubleshooting/tshoot-clients.adoc[Moving here Tshoot Clients before splitting it]
+//
+*** xref:troubleshooting/tshoot-autoinstallation.adoc[Autoinstallation]
+*** xref:troubleshooting/tshoot-baremetalsystems.adoc[Bare Metal Systems]
+*** xref:troubleshooting/tshoot-bootstrapeolcentos6.adoc[Bootstrap End-of-Life {centos} 6 Clients]
+*** xref:troubleshooting/tshoot-bootstraprepoforeolproducts.adoc[Bootstrap Repository for End-of-Life Products]
+*** xref:troubleshooting/tshoot-clonedsaltclients.adoc[Cloned Salt Clients]
+*** xref:troubleshooting/tshoot-disablingfqdnsgrain.adoc[Disabling the FQDNS grain]
+*** xref:troubleshooting/tshoot-mountingtmpwithnoexec.adoc[Mounting /tmp with noexec]
+*** xref:troubleshooting/tshoot-passinggrainsstartevent.adoc [Passing Grains to a Start Event]
+
+
 // From Install & Upgrade Guide Tshooting
 // started as single file
 // needs to be reorganized to smaller ones, one topic per file
