Finished splitting large file.

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -136,9 +136,12 @@ endif::[]
 *** xref:troubleshooting/tshoot-clonedsaltclients.adoc[Cloned Salt Clients]
 *** xref:troubleshooting/tshoot-disablingfqdnsgrain.adoc[Disabling the FQDNS grain]
 *** xref:troubleshooting/tshoot-mountingtmpwithnoexec.adoc[Mounting /tmp with noexec]
-*** xref:troubleshooting/tshoot-passinggrainsstartevent.adoc [Passing Grains to a Start Event]
-
-
+*** xref:troubleshooting/tshoot-passinggrainsstartevent.adoc[Passing Grains to a Start Event]
+*** xref:troubleshooting/tshoot-proxyandfqdn.adoc[Proxy Connections and FQDN]
+*** xref:troubleshooting/tshoot-redhatmultiplecerts.adoc[Red Hat CDN Channel and Multiple Certificates]
+*** xref:troubleshooting/tshoot-registrationfromwebui.adoc[Registration from {webui} fails and does not show any errors]
+*** xref:troubleshooting/tshoot-registeringolderclients.adoc[Registering Older Clients]
+*** xref:troubleshooting/tshoot-saltclientsdowndnssettings.adoc[Salt clients shown as down and DNS settings]
 // From Install & Upgrade Guide Tshooting
 // started as single file
 // needs to be reorganized to smaller ones, one topic per file
