--- a/modules/installation-and-upgrade/pages/install-vm.adoc
+++ b/modules/installation-and-upgrade/pages/install-vm.adoc
@@ -1,5 +1,5 @@
 [[install-vm]]
-= Install SUSE Manager in a Virtual Machine Environment with {minimalsles}
+= Install {productname} in a Virtual Machine Environment with {minimalsles}
 
 
 
@@ -43,7 +43,7 @@ Find the {minimalsles} image at https://download.suse.com/.
 
 [NOTE]
 ====
-For more information on {sle} Virtualization Guide, see https://documentation.suse.com/sles/15-SP3/html/SLES-all/book-virtualization.html.
+For more information on {sle} Virtualization Guide, see https://documentation.suse.com/sles/15-SP4/html/SLES-all/book-virtualization.html.
 ====
 
 
@@ -102,7 +102,8 @@ In the next message box click btn:[Confirm root Password].
 rpm -e --nodeps sles-release
 ----
 
-. Register {productname} with SCC (for example, replace `<productnumber>` with `{productnumber}` and `<architecture>` with `x86_64`):
+. Register {productname} with SCC.
+  For example, replace `<productnumber>` with `{productnumber}` and `<architecture>` with `x86_64`:
 +
 
 ----
@@ -115,7 +116,7 @@ SUSEConnect -e <EMAIL_ADDRESS> -r <SUSE_MANAGER_CODE> \
 
 ----
 SUSEConnect -p sle-module-basesystem/15.4/x86_64
-SUSEConnect -p sle-module-python2/15.4/x86_64
+SUSEConnect -p sle-module-python3/15.4/x86_64
 SUSEConnect -p sle-module-server-applications/15.4/x86_64
 SUSEConnect -p sle-module-web-scripting/15.4/x86_64
 SUSEConnect -p sle-module-suse-manager-server/<productnumber>/x86_64
@@ -163,7 +164,7 @@ Also consider to create a separate partition for [path]``/srv`` where Kiwi image
 | VirtIO Disk 4        | [path]``swap``           | 4{nbsp}GB    | swap
 |===
 
-. Exit the partitioner and install the {productname} pattern (approximately 730 packages, using 1.4 GB of disk space when installed):
+. Exit the partitioner and install the {productname} pattern (approximately 730 packages, using 1.4 GB of disk space when installed):
 +
 
 ----
