Single Tshoot: One issue per file split (cont.) (#1648)
* Continued to split large files to smaller ones.

* Finished splitting large file.

* Commented out files not needed at this stage.

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -128,6 +128,20 @@ endif::[]
 // started as single file
 // needs to be reorganized to smaller ones, one topic per file
 //*** xref:troubleshooting/tshoot-clients.adoc[Moving here Tshoot Clients before splitting it]
+// Files after splitting:
+//*** xref:troubleshooting/tshoot-autoinstallation.adoc[Autoinstallation]
+//*** xref:troubleshooting/tshoot-baremetalsystems.adoc[Bare Metal Systems]
+//*** xref:troubleshooting/tshoot-bootstrapeolcentos6.adoc[Bootstrap End-of-Life {centos} 6 Clients]
+//*** xref:troubleshooting/tshoot-bootstraprepoforeolproducts.adoc[Bootstrap Repository for End-of-Life Products]
+//*** xref:troubleshooting/tshoot-clonedsaltclients.adoc[Cloned Salt Clients]
+//*** xref:troubleshooting/tshoot-disablingfqdnsgrain.adoc[Disabling the FQDNS grain]
+//*** xref:troubleshooting/tshoot-mountingtmpwithnoexec.adoc[Mounting /tmp with noexec]
+//*** xref:troubleshooting/tshoot-passinggrainsstartevent.adoc[Passing Grains to a Start Event]
+//*** xref:troubleshooting/tshoot-proxyandfqdn.adoc[Proxy Connections and FQDN]
+//*** xref:troubleshooting/tshoot-redhatmultiplecerts.adoc[Red Hat CDN Channel and Multiple Certificates]
+//*** xref:troubleshooting/tshoot-registrationfromwebui.adoc[Registration from {webui} fails and does not show any errors]
+//*** xref:troubleshooting/tshoot-registeringolderclients.adoc[Registering Older Clients]
+//*** xref:troubleshooting/tshoot-saltclientsdowndnssettings.adoc[Salt clients shown as down and DNS settings]
 //
 // From Install & Upgrade Guide Tshooting
 // started as single file
