First draft for vendor GPG keys.

--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -34,6 +34,7 @@ endif::[]
 *** xref:bootstrap-repository.adoc[Bootstrap Repository]
 *** xref:activation-keys.adoc[Activation Keys]
 *** xref:gpg-keys.adoc[GPG Keys]
+**** xref:vendor-gpg-keys.adoc[Vendor GPG Keys]
 // Contact Methods
 ** xref:contact-methods-intro.adoc[Client Management Methods]
 *** xref:contact-methods-salt.adoc[Managing Salt Clients]
