--- a/modules/client-configuration/pages/vendor-gpg-keys.adoc
+++ b/modules/client-configuration/pages/vendor-gpg-keys.adoc
@@ -52,7 +52,7 @@ deb [trusted-by=/usr/share/keyring/my.key]
 === Enabling local repositories
 
 By default, all local repositories are disabled before bootstrapping. 
-They get disabled again on every channel state apply (e.g. highstate). 
+They get disabled again on every channel state apply (for example, highstate). 
 
 This can be changed by setting a pillar data for the client to [literal]`mgr_disable_local_repos = False`.
 
