--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -90,7 +90,7 @@ endif::[]
 **** xref:clients-rocky.adoc[Rocky Linux Clients]
 // Ubuntu Client Registration
 *** xref:registration-overview-ubuntu.adoc[Ubuntu Client Registration]
-**** xref:clients-ubuntu.adoc[Ubuntu 20.04 Clients]
+**** xref:clients-ubuntu.adoc[Ubuntu 20.04 and 22.04 Clients]
 **** xref:clients-ubuntu-old.adoc[Ubuntu 16.04 and 18.04 Clients]
 // Registering Clients on a Proxy
 *** xref:client-proxy.adoc[Client Registration to a Proxy]
