--- a/modules/client-configuration/pages/clients-ubuntu-old.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu-old.adoc
@@ -5,8 +5,8 @@ This section contains information about registering Salt clients running {ubuntu
 
 ifeval::[{suma-content} == true]
 
-{productname} supports {ubuntu} 16.04 LTS, 18.04 LTS, and 20.04 LTS clients using Salt.
-For information about registering Salt clients running {ubuntu} 20.04, see xref:client-configuration:clients-ubuntu.adoc[].
+{productname} supports {ubuntu} 16.04 LTS, 18.04 LTS, 20.04 LTS and 22.04 LTS lients using Salt.
+For information about registering Salt clients running {ubuntu} 20.04 and 22.04, see xref:client-configuration:clients-ubuntu.adoc[].
 
 endif::[]
 
