--- a/modules/client-configuration/pages/supported-features-ubuntu.adoc
+++ b/modules/client-configuration/pages/supported-features-ubuntu.adoc
@@ -25,8 +25,6 @@ The icons in this table indicate:
 * {trad} the feature is supported only on traditional clients
 * {salt} the feature is supported only on Salt clients.
 
-
-// Remove the ifs and the uyuni part when we add the Ubuntu 20.04 there (Leap 15.2 server is require first)
 ifeval::[{suma-content} == true]
 
 [cols="1,1,1,1", options="header"]
@@ -37,8 +35,10 @@ ifeval::[{suma-content} == true]
 | {ubuntu}{nbsp}16.04
 | {ubuntu}{nbsp}18.04
 | {ubuntu}{nbsp}20.04
+| {ubuntu}{nbsp}22.04
 
 | Client
+| {check}
 | {check}
 | {check}
 | {check}
@@ -47,8 +47,10 @@ ifeval::[{suma-content} == true]
 | {ubuntu} Community
 | {ubuntu} Community
 | {ubuntu} Community
+| {ubuntu} Community
 
 | Registration
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -57,8 +59,10 @@ ifeval::[{suma-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Apply patches
+| {check}
 | {check}
 | {check}
 | {check}
@@ -67,8 +71,10 @@ ifeval::[{suma-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | System package states
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -77,8 +83,10 @@ ifeval::[{suma-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Group custom states
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -87,8 +95,10 @@ ifeval::[{suma-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | System set manager (SSM)
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -97,8 +107,10 @@ ifeval::[{suma-content} == true]
 | N/A
 | N/A
 | N/A
+| N/A
 
 | Basic Virtual Guest Management {star}
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -107,8 +119,10 @@ ifeval::[{suma-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Virtual Guest Installation (Kickstart), as Host OS
+| {cross}
 | {cross}
 | {cross}
 | {cross}
@@ -117,8 +131,10 @@ ifeval::[{suma-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | System deployment (PXE/Kickstart)
+| {cross}
 | {cross}
 | {cross}
 | {cross}
@@ -127,8 +143,10 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {cross}
 | {cross}
+| {cross}
 
 | Contact methods
+| {salt}: ZeroMQ, Salt-SSH
 | {salt}: ZeroMQ, Salt-SSH
 | {salt}: ZeroMQ, Salt-SSH
 | {salt}: ZeroMQ, Salt-SSH
@@ -137,8 +155,10 @@ ifeval::[{suma-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Action chains
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -147,8 +167,10 @@ ifeval::[{suma-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Duplicate package reporting
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -157,8 +179,10 @@ ifeval::[{suma-content} == true]
 | {question}
 | {question}
 | {question}
+| {question}
 
 | SCAP auditing
+| {question}
 | {question}
 | {question}
 | {question}
@@ -167,8 +191,10 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {cross}
 | {cross}
+| {cross}
 
 | Package locking
+| {check}
 | {check}
 | {check}
 | {check}
@@ -177,8 +203,10 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 | {check}
+| {check}
 
 | System locking
+| {cross}
 | {cross}
 | {cross}
 | {cross}
@@ -187,8 +215,10 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {cross}
 | {cross}
+| {cross}
 
 | Configuration file management
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -197,8 +227,10 @@ ifeval::[{suma-content} == true]
 | {salt}: Profiles supported, Sync not supported
 | {salt}: Profiles supported, Sync not supported
 | {salt}: Profiles supported, Sync not supported
+| {salt}: Profiles supported, Sync not supported
 
 | Power management
+| {check}
 | {check}
 | {check}
 | {check}
@@ -207,8 +239,10 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {salt}
 | {salt}
+| {salt}
 
 | Docker buildhost
+| {question}
 | {question}
 | {question}
 | {question}
@@ -217,8 +251,10 @@ ifeval::[{suma-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Kiwi buildhost
+| {cross}
 | {cross}
 | {cross}
 | {cross}
@@ -227,8 +263,10 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {cross}
 | {cross}
+| {cross}
 
 | Recurring Actions
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -237,8 +275,10 @@ ifeval::[{suma-content} == true]
 | N/A
 | N/A
 | N/A
+| N/A
 
 | Yomi
+| N/A
 | N/A
 | N/A
 | N/A
@@ -258,8 +298,10 @@ ifeval::[{uyuni-content} == true]
 | {ubuntu}{nbsp}16.04
 | {ubuntu}{nbsp}18.04
 | {ubuntu}{nbsp}20.04
+| {ubuntu}{nbsp}22.04
 
 | Client
+| {check}
 | {check}
 | {check}
 | {check}
@@ -268,8 +310,10 @@ ifeval::[{uyuni-content} == true]
 | Canonical
 | Canonical
 | Canonical
+| Canonical
 
 | Registration
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -278,8 +322,10 @@ ifeval::[{uyuni-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Apply patches
+| {check}
 | {check}
 | {check}
 | {check}
@@ -288,8 +334,10 @@ ifeval::[{uyuni-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | System package states
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -298,8 +346,10 @@ ifeval::[{uyuni-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Group custom states
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -308,8 +358,10 @@ ifeval::[{uyuni-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | System set manager (SSM)
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -318,8 +370,10 @@ ifeval::[{uyuni-content} == true]
 | N/A
 | N/A
 | N/A
+| N/A
 
 | Basic Virtual Guest Management {star}
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -328,8 +382,10 @@ ifeval::[{uyuni-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Virtual Guest Installation (Kickstart), as Host OS
+| {cross}
 | {cross}
 | {cross}
 | {cross}
@@ -338,8 +394,10 @@ ifeval::[{uyuni-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | System deployment (PXE/Kickstart)
+| {cross}
 | {cross}
 | {cross}
 | {cross}
@@ -348,8 +406,10 @@ ifeval::[{uyuni-content} == true]
 | {cross}
 | {cross}
 | {cross}
+| {cross}
 
 | Contact methods
+| {salt}: ZeroMQ, Salt-SSH
 | {salt}: ZeroMQ, Salt-SSH
 | {salt}: ZeroMQ, Salt-SSH
 | {salt}: ZeroMQ, Salt-SSH
@@ -358,8 +418,10 @@ ifeval::[{uyuni-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Action chains
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -368,8 +430,10 @@ ifeval::[{uyuni-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Duplicate package reporting
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -378,8 +442,10 @@ ifeval::[{uyuni-content} == true]
 | {question}
 | {question}
 | {question}
+| {question}
 
 | SCAP auditing
+| {question}
 | {question}
 | {question}
 | {question}
@@ -388,8 +454,10 @@ ifeval::[{uyuni-content} == true]
 | {cross}
 | {cross}
 | {cross}
+| {cross}
 
 | Package locking
+| {check}
 | {check}
 | {check}
 | {check}
@@ -398,8 +466,10 @@ ifeval::[{uyuni-content} == true]
 | {cross}
 | {cross}
 | {cross}
+| {cross}
 
 | System snapshot
+| {cross}
 | {cross}
 | {cross}
 | {cross}
@@ -408,8 +478,10 @@ ifeval::[{uyuni-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Package profiles
+| {salt}: Profiles supported, Sync not supported
 | {salt}: Profiles supported, Sync not supported
 | {salt}: Profiles supported, Sync not supported
 | {salt}: Profiles supported, Sync not supported
@@ -418,13 +490,16 @@ ifeval::[{uyuni-content} == true]
 | {check}
 | {check}
 | {check}
+| {check}
 
 | Monitoring
 | {cross}
 | {salt}
 | {salt}
+| {salt}
 
 | Docker buildhost
+| {question}
 | {question}
 | {question}
 | {question}
@@ -433,13 +508,16 @@ ifeval::[{uyuni-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Kiwi buildhost
 | {cross}
 | {cross}
 | {cross}
+| {cross}
 
 | Build Kiwi image with OS
+| {cross}
 | {cross}
 | {cross}
 | {cross}
