--- a/modules/snippets/pages/supported-client-systems-snippet.adoc
+++ b/modules/snippets/pages/supported-client-systems-snippet.adoc
@@ -105,6 +105,11 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {check}
 
+| {ubuntu} 22.04
+| {x86_64}
+| {cross}
+| {check}
+
 | {ubuntu} 20.04
 | {x86_64}
 | {cross}
@@ -232,6 +237,11 @@ ifeval::[{uyuni-content} == true]
 
 | {rocky} 8
 | {x86_64}, {ppc64le}, {aarch64}
+| {cross}
+| {check}
+
+| {ubuntu} 22.04
+| {x86_64}
 | {cross}
 | {check}
 
