--- a/modules/client-configuration/pages/clients-openeuler.adoc
+++ b/modules/client-configuration/pages/clients-openeuler.adoc
@@ -3,7 +3,17 @@
 
 This section contains information about registering traditional and Salt clients running {openeuler} operating systems.
 
-
+////
+ifeval::[{suma-content} == true]
+// Use list format: repository URLs / packages and metadata / version info
+[IMPORTANT]
+====
+* {openeuler} repository URLs are available from {scc}
+* Packages and metadata are provided by XXX, not by {suse}
+* For supported products, see the support table and the release notes
+====
+endif::[]
+////
 [IMPORTANT]
 ====
 Traditional clients are not available on {openeuler}{nbsp}22.03.
