--- a/modules/installation-and-upgrade/pages/install-server-unified.adoc
+++ b/modules/installation-and-upgrade/pages/install-server-unified.adoc
@@ -30,25 +30,25 @@ Before installing {susemgr}, ensure your physical or virtual machine has enough 
 . When prompted, select [guimenu]``Installation``.
 . In the [guimenu]``Language, Keyboard and Product Selection`` screen, check [guimenu]``SUSE Manager Server``, and click btn:[Next].
 +
-image::unifiedinstaller-install.png[scaledwidth=80%]
+// image::unifiedinstaller-install.png[scaledwidth=80%]
 . Read and agree to the End User Licence Agreement, and click btn:[Next].
 . In the [guimenu]``Registration`` screen, check the [guimenu]``Register System via scc.suse.com`` checkbox, enter your {scc} credentials, and click btn:[Next].
 +
-image::unifiedinstaller-registration.png[scaledwidth=80%]
+// image::unifiedinstaller-registration.png[scaledwidth=80%]
 . In the [guimenu]``Extension and Module Selection`` screen, select additional extensions or modules you require, and click btn:[Next].
     Mandatory modules are pre-selected and you cannot disable them.
 +
 // The registration server offers update repositories.
-image::unifiedinstaller-extensions.png[scaledwidth=80%]
+// image::unifiedinstaller-extensions.png[scaledwidth=80%]
 +
 . OPTIONAL: In the [guimenu]``Add On Product`` screen, select any additional or add-on products you require, and click btn:[Next].
-    We do not recommend that you run any other workloads on {productname}.
-    Only use add-ons that you absolutely require, such as driver repositories from your hardware vendor.
+  We do not recommend that you run any other workloads on {productname}.
+  Only use add-ons that you absolutely require, such as driver repositories from your hardware vendor.
 +
-image::unifiedinstaller-addon.png[scaledwidth=80%]
+// image::unifiedinstaller-addon.png[scaledwidth=80%]
 . In the [guimenu]``System Role`` screen, check the [guimenu]``SUSE Manager Server`` checkbox, and click btn:[Next].
 +
-image::unifiedinstaller-systemrole.png[scaledwidth=80%]
+// image::unifiedinstaller-systemrole.png[scaledwidth=80%]
 . In the [guimenu]``Suggested Partitioning`` screen, either accept the default values, or use the btn:[Guided Setup] or btn:[Expert Partitioner] options to customize your partitioning model, and click btn:[Next].
 . In the [guimenu]``Clock and Time Zone`` screen, enter your region and timezone, and click btn:[Next].
 . In the [guimenu]``Local Users`` screen, create a new user, and click btn:[Next].
