--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -1,18 +1,53 @@
-By default, operating systems trust only their own GPG keys when they are installed, and do not trust keys provided by third party packages.
+Operating Systems either trust their own GPG keys directly or at least ship them installed with the minimal system.
+But third party packages signed by a different GPG key needs manual handling.
 The clients can be successfully bootstrapped without the GPG key being trusted.
 However, you cannot install new client tool packages or update them until the keys are trusted.
 
-Salt clients are set to trust {suse} tools channels GPG keys when they are bootstrapped.
-For all other clients and channels, you need to manually trust third party GPG keys.
+Salt Clients use now GPG key information entered for a Software Channel to manage the trusted keys.
+When a Software Channel with GPG key information is assigned to a client, the key gets trusted
+as soon as the channel is refreshed or the first package gets installed from this channel.
 
+The GPG key url which is set of a Software Channel must exist. In case it is a file url,
+the GPG key file must be deployed on the client before the software channel is used.
 
-[NOTE]
-====
-If you are bootstrapping Salt clients from the {productname} {webui}, you can use a Salt state to trust the key.
-For more information on custom Salt states, see xref:specialized-guides:salt/salt-custom-states.adoc[].
-====
+The GPG keys for the Client Tools Channels of {redhat} based clients are deployed on the client
+into [path]`/etc/pki/rpm-gpg/` and can be referenced with file URLs.
+Same happens for the Expanded Support GPG key. Only in case a software channel is assigned to the client
+they will be imported and trusted by the system.
 
+=== Customer defined GPG keys
 
+Customers can define their own GPG keys to deploy to the client.
+
+By providing some pillar data and providing the GPG key files in the {salt} filesystem, they are automatically deployed to the client.
+
+These keys are deployed into [path]`/etc/pki/rpm-gpg/` on RPM based operating systems and to [path]`/usr/share/keyrings/` on Debian systems:
+
+Define the pillar key `custom_gpgkeys` for the client you want to deploy the key to and list the names of the keyfile.
+
+----
+cat /etc/pillar/mypillar.sls
+custom_gpgkeys:
+  - my_first_gpg.key
+  - my_second_gpgkey.gpg
+----
+
+Additionally create in the {salt} filesystem a directory named `gpg` and place there the gpg key files with the same name used in the
+`custom_gpgkeys` pillar data.
+
+----
+ls -la /etc/salt/gpg/
+/etc/salt/gpg/my_first_gpg.key
+/etc/salt/gpg/my_second_gpgkey.gpg
+----
+
+The keys are now deployed to the client at [path]`/etc/pki/rpm-gpg/my_first_gpg.key` and [path]`/etc/pki/rpm-gpg/my_second_gpgkey.gpg`.
+
+The last step is to add the URL to the GPG Key URL field of the Software Channel.
+Navigate to menu:Software[Manage > Channels] and select the Channel you want to modify.
+Add to [guimenu]``GPG key URL`` the value [path]`file:///etc/pki/rpm-gpg/my_first_gpg.key`.
+
+=== GPG Keys in Bootstrap Scripts
 
 .Procedure: Trusting GPG Keys on Clients Using a Bootstrap Script
 . On the {productname} Server, at the command prompt, check the contents of the [path]``/srv/www/htdocs/pub/`` directory.
@@ -32,5 +67,6 @@ You do not need to delete any previously stored keys.
 ====
 Trusting a GPG key is important for security on clients. 
 It is the task of the admin to decide which keys are needed and can be trusted.
-Trusting the key is done manually,  either by writing a Salt state or adding the keys to the bootstrap script.
+As a Software Channel cannot be used when the GPG key is not trusted, the decision of assigning a channel
+to a client is bound to the decission of trusting the key.
 ====
