add infomration on disabling local repositories

--- a/modules/client-configuration/pages/registration-webui.adoc
+++ b/modules/client-configuration/pages/registration-webui.adoc
@@ -64,3 +64,14 @@ To review a package EULA, open the package details page in the {webui}.
 To register and use {centos}{nbsp}6, {oracle}{nbsp}6, {rhel}{nbsp}6, or {sleses}{nbsp}6 clients, you need to configure the {productname} Server to support older types of SSL encryption.
 For more information, see ``Registering Older Clients`` at xref:client-configuration:tshoot-clients.adoc[].
 ====
+
+=== Handling of Locally assigned Repositories
+
+Having repositories assigned directly to clients not served by {productname} is not usual and can create problems.
+Therfore bootstrapping via Salt disable all local repositories at the beginning of the bootstrap process.
+
+Also later on every use of the channel state, for example when executing a Highstate or a Package installation,
+all locally assigned repositories are disabled again.
+
+All software packages which are used on the clients should come from channels served by {productname}.
+For more informationon how to create custom channel, see ``Custom Channels`` at xref:administration:custom-channels.adoc[].
