add note about debian based systems

--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -15,6 +15,14 @@ into [path]`/etc/pki/rpm-gpg/` and can be referenced with file URLs.
 Same happens for the Expanded Support GPG key. Only in case a software channel is assigned to the client
 they will be imported and trusted by the system.
 
+[NOTE]
+====
+As Debian based systems sign only the metadata, there is typically no need to specify extra keys for signle channels.
+If a customer setup an own GPG key to sign the metadata following ``Use Your Own GPG Key`` at xref:administration:repo-metadata.adoc[]
+the deployment and trust of that key is automated.
+====
+
+
 === Customer defined GPG keys
 
 Customers can define their own GPG keys to deploy to the client.
