--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -1,4 +1,4 @@
-Operating Systems either trust their own GPG keys directly or at least ship them installed with the minimal system.
+Operating systems either trust their own GPG keys directly or at least ship them installed with the minimal system.
 But third party packages signed by a different GPG key need manual handling.
 The clients can be successfully bootstrapped without the GPG key being trusted.
 However, you cannot install new client tool packages or update them until the keys are trusted.
