--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -7,8 +7,9 @@ Salt Clients use now GPG key information entered for a Software Channel to manag
 When a Software Channel with GPG key information is assigned to a client, the key gets trusted
 as soon as the channel is refreshed or the first package gets installed from this channel.
 
-The GPG key url which is set of a Software Channel must exist. In case it is a file url,
-the GPG key file must be deployed on the client before the software channel is used.
+// The meaning of the following sentence is not clear
+The GPG key URL which is set of a software channel must exist.
+In case it is a file URL, the GPG key file must be deployed on the client before the software channel is used.
 
 The GPG keys for the Client Tools Channels of {redhat} based clients are deployed on the client
 into [path]`/etc/pki/rpm-gpg/` and can be referenced with file URLs.
