--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -3,9 +3,8 @@ But third party packages signed by a different GPG key need manual handling.
 The clients can be successfully bootstrapped without the GPG key being trusted.
 However, you cannot install new client tool packages or update them until the keys are trusted.
 
-Salt Clients use now GPG key information entered for a Software Channel to manage the trusted keys.
-When a Software Channel with GPG key information is assigned to a client, the key gets trusted
-as soon as the channel is refreshed or the first package gets installed from this channel.
+Salt clients use now GPG key information entered for a software channel to manage the trusted keys.
+When a software channel with GPG key information is assigned to a client, the key gets trusted as soon as the channel is refreshed or the first package gets installed from this channel.
 
 // The meaning of the following sentence is not clear
 The GPG key URL which is set of a software channel must exist.
