--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -17,8 +17,7 @@ they will be imported and trusted by the system.
 [NOTE]
 ====
 Because Debian based systems sign only metadata, there is typically no need to specify extra keys for single channels.
-If a customer setup an own GPG key to sign the metadata following ``Use Your Own GPG Key`` at xref:administration:repo-metadata.adoc[]
-the deployment and trust of that key is automated.
+If a user configures an own GPG key to sign the metadata as described in "Use Your Own GPG Key" in xref:administration:repo-metadata.adoc[] the deployment and trust of that key is executed automatically.
 ====
 
 
