--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -23,7 +23,7 @@ If a user configures an own GPG key to sign the metadata as described in "Use Yo
 
 === Customer defined GPG keys
 
-Customers can define their own GPG keys to deploy to the client.
+Users can define their own GPG keys to be deployed to the client.
 
 By providing some pillar data and providing the GPG key files in the {salt} filesystem, they are automatically deployed to the client.
 
