--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -27,7 +27,7 @@ Users can define their own GPG keys to be deployed to the client.
 
 By providing some pillar data and providing the GPG key files in the {salt} filesystem, they are automatically deployed to the client.
 
-These keys are deployed into [path]`/etc/pki/rpm-gpg/` on RPM based operating systems and to [path]`/usr/share/keyrings/` on Debian systems:
+These keys are deployed into [path]``/etc/pki/rpm-gpg/`` on RPM based operating systems and to [path]``/usr/share/keyrings/`` on Debian systems:
 
 Define the pillar key `custom_gpgkeys` for the client you want to deploy the key to and list the names of the keyfile.
 
