--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -29,7 +29,7 @@ By providing some pillar data and providing the GPG key files in the {salt} file
 
 These keys are deployed into [path]``/etc/pki/rpm-gpg/`` on RPM based operating systems and to [path]``/usr/share/keyrings/`` on Debian systems:
 
-Define the pillar key `custom_gpgkeys` for the client you want to deploy the key to and list the names of the keyfile.
+Define the pillar key [literal``custom_gpgkeys`` for the client you want to deploy the key to and list the names of the key file.
 
 ----
 cat /etc/pillar/mypillar.sls
