--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -51,7 +51,7 @@ The keys are now deployed to the client at [path]`/etc/pki/rpm-gpg/my_first_gpg.
 
 The last step is to add the URL to the GPG Key URL field of the Software Channel.
 Navigate to menu:Software[Manage > Channels] and select the Channel you want to modify.
-Add to [guimenu]``GPG key URL`` the value [path]`file:///etc/pki/rpm-gpg/my_first_gpg.key`.
+Add to [guimenu]``GPG key URL`` the value [literal]``file:///etc/pki/rpm-gpg/my_first_gpg.key``.
 
 === GPG Keys in Bootstrap Scripts
 
