--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -50,7 +50,7 @@ ls -la /etc/salt/gpg/
 The keys are now deployed to the client at [path]`/etc/pki/rpm-gpg/my_first_gpg.key` and [path]`/etc/pki/rpm-gpg/my_second_gpgkey.gpg`.
 
 The last step is to add the URL to the GPG Key URL field of the Software Channel.
-Navigate to menu:Software[Manage > Channels] and select the Channel you want to modify.
+Navigate to menu:Software[Manage > Channels] and select the channel you want to modify.
 Add to [guimenu]``GPG key URL`` the value [literal]``file:///etc/pki/rpm-gpg/my_first_gpg.key``.
 
 === GPG Keys in Bootstrap Scripts
