--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -47,7 +47,7 @@ ls -la /etc/salt/gpg/
 /etc/salt/gpg/my_second_gpgkey.gpg
 ----
 
-The keys are now deployed to the client at [path]`/etc/pki/rpm-gpg/my_first_gpg.key` and [path]`/etc/pki/rpm-gpg/my_second_gpgkey.gpg`.
+The keys are now deployed to the client at [path]``/etc/pki/rpm-gpg/my_first_gpg.key`` and [path]``/etc/pki/rpm-gpg/my_second_gpgkey.gpg``.
 
 The last step is to add the URL to the GPG key URL field of the software channel.
 Navigate to menu:Software[Manage > Channels] and select the channel you want to modify.
