--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -40,6 +40,8 @@ custom_gpgkeys:
 
 Additionally create in the {salt} filesystem a directory named `gpg` and place there the gpg key files with the same name used in the
 `custom_gpgkeys` pillar data.
+// I think the ls command is here to show the contents of the directory.
+// In this case, the ls is superfluous.
 
 ----
 ls -la /etc/salt/gpg/
