--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -30,7 +30,8 @@ By providing some pillar data and providing the GPG key files in the {salt} file
 These keys are deployed into [path]``/etc/pki/rpm-gpg/`` on RPM based operating systems and to [path]``/usr/share/keyrings/`` on Debian systems:
 
 Define the pillar key [literal``custom_gpgkeys`` for the client you want to deploy the key to and list the names of the key file.
-
+// I think the cat command is here to show the contents of the file.
+// In this case, the cat is superfluous.
 ----
 cat /etc/pillar/mypillar.sls
 custom_gpgkeys:
