--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -21,7 +21,7 @@ If a user configures an own GPG key to sign the metadata as described in "Use Yo
 ====
 
 
-=== Customer defined GPG keys
+=== User defined GPG keys
 
 Users can define their own GPG keys to be deployed to the client.
 
