--- a/modules/client-configuration/pages/registration-webui.adoc
+++ b/modules/client-configuration/pages/registration-webui.adoc
@@ -67,7 +67,8 @@ For more information, see ``Registering Older Clients`` at xref:client-configura
 
 === Handling of Locally assigned Repositories
 
-Having repositories assigned directly to clients not served by {productname} is not usual and can create problems.
+Having repositories assigned directly to clients not served by {productname} is not a common use case.
+It can cause trouble.
 Therfore bootstrapping via Salt disable all local repositories at the beginning of the bootstrap process.
 
 Also later on every use of the channel state, for example when executing a Highstate or a Package installation,
