--- a/modules/client-configuration/pages/registration-webui.adoc
+++ b/modules/client-configuration/pages/registration-webui.adoc
@@ -69,7 +69,7 @@ For more information, see ``Registering Older Clients`` at xref:client-configura
 
 Having repositories assigned directly to clients not served by {productname} is not a common use case.
 It can cause trouble.
-Therfore bootstrapping via Salt disable all local repositories at the beginning of the bootstrap process.
+Therfore bootstrapping via Salt disables all local repositories at the beginning of the bootstrap process.
 
 Later, during every use of the channel state, for example when executing a Highstate or a package installation, all locally assigned repositories are disabled again.
 
