--- a/modules/client-configuration/pages/registration-webui.adoc
+++ b/modules/client-configuration/pages/registration-webui.adoc
@@ -74,4 +74,4 @@ Therfore bootstrapping via Salt disables all local repositories at the beginning
 Later, during every use of the channel state, for example when executing a Highstate or a package installation, all locally assigned repositories are disabled again.
 
 All software packages which are used on the clients should come from channels served by {productname}.
-For more informationon how to create custom channel, see ``Custom Channels`` at xref:administration:custom-channels.adoc[].
+For more information about creating a custom channel, see ``Custom Channels`` at xref:administration:custom-channels.adoc[].
