remove "Documented Ubuntu 22.04 LTS" https://github.com/SUSE/spacewalk/issues/18407 thus far, suma 4.3.1 does not support it

--- a/modules/client-configuration/pages/supported-features-ubuntu.adoc
+++ b/modules/client-configuration/pages/supported-features-ubuntu.adoc
@@ -25,6 +25,8 @@ The icons in this table indicate:
 * {trad} the feature is supported only on traditional clients
 * {salt} the feature is supported only on Salt clients.
 
+
+// Remove the ifs and the uyuni part when we add the Ubuntu 20.04 there (Leap 15.2 server is require first)
 ifeval::[{suma-content} == true]
 
 [cols="1,1,1,1", options="header"]
@@ -35,10 +37,8 @@ ifeval::[{suma-content} == true]
 | {ubuntu}{nbsp}16.04
 | {ubuntu}{nbsp}18.04
 | {ubuntu}{nbsp}20.04
-| {ubuntu}{nbsp}22.04
 
 | Client
-| {check}
 | {check}
 | {check}
 | {check}
@@ -47,10 +47,8 @@ ifeval::[{suma-content} == true]
 | {ubuntu} Community
 | {ubuntu} Community
 | {ubuntu} Community
-| {ubuntu} Community
 
 | Registration
-| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -59,10 +57,8 @@ ifeval::[{suma-content} == true]
 | {salt}
 | {salt}
 | {salt}
-| {salt}
 
 | Apply patches
-| {check}
 | {check}
 | {check}
 | {check}
@@ -71,10 +67,8 @@ ifeval::[{suma-content} == true]
 | {salt}
 | {salt}
 | {salt}
-| {salt}
 
 | System package states
-| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -83,10 +77,8 @@ ifeval::[{suma-content} == true]
 | {salt}
 | {salt}
 | {salt}
-| {salt}
 
 | Group custom states
-| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -95,10 +87,8 @@ ifeval::[{suma-content} == true]
 | {salt}
 | {salt}
 | {salt}
-| {salt}
 
 | System set manager (SSM)
-| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -107,10 +97,8 @@ ifeval::[{suma-content} == true]
 | N/A
 | N/A
 | N/A
-| N/A
 
 | Basic Virtual Guest Management {star}
-| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -119,10 +107,8 @@ ifeval::[{suma-content} == true]
 | {salt}
 | {salt}
 | {salt}
-| {salt}
 
 | Virtual Guest Installation (Kickstart), as Host OS
-| {cross}
 | {cross}
 | {cross}
 | {cross}
@@ -131,10 +117,8 @@ ifeval::[{suma-content} == true]
 | {salt}
 | {salt}
 | {salt}
-| {salt}
 
 | System deployment (PXE/Kickstart)
-| {cross}
 | {cross}
 | {cross}
 | {cross}
@@ -143,10 +127,8 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {cross}
 | {cross}
-| {cross}
 
 | Contact methods
-| {salt}: ZeroMQ, Salt-SSH
 | {salt}: ZeroMQ, Salt-SSH
 | {salt}: ZeroMQ, Salt-SSH
 | {salt}: ZeroMQ, Salt-SSH
@@ -155,10 +137,8 @@ ifeval::[{suma-content} == true]
 | {salt}
 | {salt}
 | {salt}
-| {salt}
 
 | Action chains
-| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -167,10 +147,8 @@ ifeval::[{suma-content} == true]
 | {salt}
 | {salt}
 | {salt}
-| {salt}
 
 | Duplicate package reporting
-| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -179,10 +157,8 @@ ifeval::[{suma-content} == true]
 | {question}
 | {question}
 | {question}
-| {question}
 
 | SCAP auditing
-| {question}
 | {question}
 | {question}
 | {question}
@@ -191,10 +167,8 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {cross}
 | {cross}
-| {cross}
 
 | Package locking
-| {check}
 | {check}
 | {check}
 | {check}
@@ -203,10 +177,8 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 | {check}
-| {check}
 
 | System locking
-| {cross}
 | {cross}
 | {cross}
 | {cross}
@@ -215,10 +187,8 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {cross}
 | {cross}
-| {cross}
 
 | Configuration file management
-| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -227,10 +197,8 @@ ifeval::[{suma-content} == true]
 | {salt}: Profiles supported, Sync not supported
 | {salt}: Profiles supported, Sync not supported
 | {salt}: Profiles supported, Sync not supported
-| {salt}: Profiles supported, Sync not supported
 
 | Power management
-| {check}
 | {check}
 | {check}
 | {check}
@@ -239,10 +207,8 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {salt}
 | {salt}
-| {salt}
 
 | Docker buildhost
-| {question}
 | {question}
 | {question}
 | {question}
@@ -251,10 +217,8 @@ ifeval::[{suma-content} == true]
 | {salt}
 | {salt}
 | {salt}
-| {salt}
 
 | Kiwi buildhost
-| {cross}
 | {cross}
 | {cross}
 | {cross}
@@ -263,10 +227,8 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {cross}
 | {cross}
-| {cross}
 
 | Recurring Actions
-| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -275,10 +237,8 @@ ifeval::[{suma-content} == true]
 | N/A
 | N/A
 | N/A
-| N/A
 
 | Yomi
-| N/A
 | N/A
 | N/A
 | N/A
@@ -298,10 +258,8 @@ ifeval::[{uyuni-content} == true]
 | {ubuntu}{nbsp}16.04
 | {ubuntu}{nbsp}18.04
 | {ubuntu}{nbsp}20.04
-| {ubuntu}{nbsp}22.04
 
 | Client
-| {check}
 | {check}
 | {check}
 | {check}
@@ -310,10 +268,8 @@ ifeval::[{uyuni-content} == true]
 | Canonical
 | Canonical
 | Canonical
-| Canonical
 
 | Registration
-| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -322,10 +278,8 @@ ifeval::[{uyuni-content} == true]
 | {salt}
 | {salt}
 | {salt}
-| {salt}
 
 | Apply patches
-| {check}
 | {check}
 | {check}
 | {check}
@@ -334,10 +288,8 @@ ifeval::[{uyuni-content} == true]
 | {salt}
 | {salt}
 | {salt}
-| {salt}
 
 | System package states
-| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -346,10 +298,8 @@ ifeval::[{uyuni-content} == true]
 | {salt}
 | {salt}
 | {salt}
-| {salt}
 
 | Group custom states
-| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -358,10 +308,8 @@ ifeval::[{uyuni-content} == true]
 | {salt}
 | {salt}
 | {salt}
-| {salt}
 
 | System set manager (SSM)
-| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -370,10 +318,8 @@ ifeval::[{uyuni-content} == true]
 | N/A
 | N/A
 | N/A
-| N/A
 
 | Basic Virtual Guest Management {star}
-| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -382,10 +328,8 @@ ifeval::[{uyuni-content} == true]
 | {salt}
 | {salt}
 | {salt}
-| {salt}
 
 | Virtual Guest Installation (Kickstart), as Host OS
-| {cross}
 | {cross}
 | {cross}
 | {cross}
@@ -394,10 +338,8 @@ ifeval::[{uyuni-content} == true]
 | {salt}
 | {salt}
 | {salt}
-| {salt}
 
 | System deployment (PXE/Kickstart)
-| {cross}
 | {cross}
 | {cross}
 | {cross}
@@ -406,10 +348,8 @@ ifeval::[{uyuni-content} == true]
 | {cross}
 | {cross}
 | {cross}
-| {cross}
 
 | Contact methods
-| {salt}: ZeroMQ, Salt-SSH
 | {salt}: ZeroMQ, Salt-SSH
 | {salt}: ZeroMQ, Salt-SSH
 | {salt}: ZeroMQ, Salt-SSH
@@ -418,10 +358,8 @@ ifeval::[{uyuni-content} == true]
 | {salt}
 | {salt}
 | {salt}
-| {salt}
 
 | Action chains
-| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -430,10 +368,8 @@ ifeval::[{uyuni-content} == true]
 | {salt}
 | {salt}
 | {salt}
-| {salt}
 
 | Duplicate package reporting
-| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -442,10 +378,8 @@ ifeval::[{uyuni-content} == true]
 | {question}
 | {question}
 | {question}
-| {question}
 
 | SCAP auditing
-| {question}
 | {question}
 | {question}
 | {question}
@@ -454,10 +388,8 @@ ifeval::[{uyuni-content} == true]
 | {cross}
 | {cross}
 | {cross}
-| {cross}
 
 | Package locking
-| {check}
 | {check}
 | {check}
 | {check}
@@ -466,10 +398,8 @@ ifeval::[{uyuni-content} == true]
 | {cross}
 | {cross}
 | {cross}
-| {cross}
 
 | System snapshot
-| {cross}
 | {cross}
 | {cross}
 | {cross}
@@ -478,10 +408,8 @@ ifeval::[{uyuni-content} == true]
 | {salt}
 | {salt}
 | {salt}
-| {salt}
 
 | Package profiles
-| {salt}: Profiles supported, Sync not supported
 | {salt}: Profiles supported, Sync not supported
 | {salt}: Profiles supported, Sync not supported
 | {salt}: Profiles supported, Sync not supported
@@ -490,16 +418,13 @@ ifeval::[{uyuni-content} == true]
 | {check}
 | {check}
 | {check}
-| {check}
 
 | Monitoring
 | {cross}
 | {salt}
 | {salt}
-| {salt}
 
 | Docker buildhost
-| {question}
 | {question}
 | {question}
 | {question}
@@ -508,16 +433,13 @@ ifeval::[{uyuni-content} == true]
 | {salt}
 | {salt}
 | {salt}
-| {salt}
 
 | Kiwi buildhost
 | {cross}
 | {cross}
 | {cross}
-| {cross}
 
 | Build Kiwi image with OS
-| {cross}
 | {cross}
 | {cross}
 | {cross}
