--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -1,10 +1,10 @@
 [[clients-ubuntu]]
-= Registering {ubuntu} 20.04 and 22.04 Clients
+= Registering {ubuntu} 20.04 Clients
 
-This section contains information about registering Salt clients running {ubuntu} 20.04 LTS and 22.04 LTS operating systems.
+This section contains information about registering Salt clients running {ubuntu} 20.04 LTS operating systems.
 
 ifeval::[{suma-content} == true]
-{productname} supports {ubuntu} 16.04 LTS, 18.04 LTS, 20.04 LTS and 22.04 LTS clients using Salt.
+{productname} supports {ubuntu} 16.04 LTS, 18.04 LTS, and 20.04 LTS clients using Salt.
 For information about registering Salt clients running {ubuntu} 16.04 LTS and 18.04 LTS, see xref:client-configuration:clients-ubuntu-old.adoc[].
 endif::[]
 
@@ -41,7 +41,6 @@ The products you need for this procedure are:
 
 | OS Version | Product Name
 | {ubuntu} 20.04 | Ubuntu 20.04
-| {ubuntu} 22.04 | Ubuntu 22.04
 |===
 
 include::snippets/addchannels_vendor_webui.adoc[]
@@ -56,7 +55,6 @@ The channels you need for this procedure are:
 
 | OS Version | Base Channel
 | {ubuntu} 20.04 | ubuntu-2004-amd64-main-amd64
-| {ubuntu} 22.04 | ubuntu-2204-amd64-main-amd64
 |===
 
 include::snippets/addchannels_vendor_cli.adoc[]
@@ -75,7 +73,6 @@ The channels you need for this procedure are:
 | OS Version | Base Channel | Main Channel | Updates Channel | Security Channel | Client Channel
 
 | {ubuntu} 20.04 | ubuntu-2004-amd64-main for amd64 | ubuntu-2004-amd64-main-uyuni | ubuntu-2004-amd64-main-updates-uyuni | ubuntu-2004-amd64-main-security-uyuni | ubuntu-2004-amd64-uyuni-client
-| {ubuntu} 22.04 | ubuntu-2204-amd64-main for amd64 | ubuntu-2204-amd64-main-uyuni | ubuntu-2204-amd64-main-updates-uyuni | ubuntu-2204-amd64-main-security-uyuni | ubuntu-2204-amd64-uyuni-client
 |===
 
 include::snippets/addchannels_novendor_cli.adoc[]
