--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -82,7 +82,7 @@ Version 20.04 also requires the Universe channels:
 
 [[ubuntu-universe-channels-cli-uyuni]]
 [cols="1,1", options="header"]
-.Ubuntu Universe Channels - CLI
+.Ubuntu 20.04 Universe Channels - CLI
 |===
 
 | {ubuntu} 20.04           | {nbsp}
