remove "add 20.04 universe (#1664)
* remove "add 20.04 universe
* Update modules/client-configuration/pages/clients-ubuntu.adoc
Co-authored-by: Julio González Gil <juliogonzalez@users.noreply.github.com>
* add 20.04 universe backports channel
Co-authored-by: Julio González Gil <juliogonzalez@users.noreply.github.com>

--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -78,6 +78,21 @@ The channels you need for this procedure are:
 | {ubuntu} 22.04 | ubuntu-2204-amd64-main for amd64 | ubuntu-2204-amd64-main-uyuni | ubuntu-2204-amd64-main-updates-uyuni | ubuntu-2204-amd64-main-security-uyuni | ubuntu-2204-amd64-uyuni-client
 |===
 
+Version 20.04 also requires the Universe channels:
+
+[[ubuntu-universe-channels-cli-uyuni]]
+[cols="1,1", options="header"]
+.Ubuntu 20.04 Universe Channels - CLI
+|===
+
+| {ubuntu} 20.04           | {nbsp}
+| Universe Channel         | ubuntu-2004-amd64-universe-uyuni
+| Universe Updates Channel | ubuntu-2004-amd64-universe-updates-uyuni
+| Universe Security Updates Channel | ubuntu-2004-amd64-universe-security-uyuni
+| Universe Backports Channel | ubuntu-2004-amd64-universe-backports-uyuni
+
+|===
+
 include::snippets/addchannels_novendor_cli.adoc[]
 
 [IMPORTANT]
