Add a note about using PIP with the Salt Bundle

--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -94,3 +94,24 @@ Using `salt-thin` can be enabled as a fallback method, but it requires Python 3 
 This method is not recommended nor supported and exists for development purposes only.
 Set [option]``web.ssh_use_salt_thin`` to `true` in the [path]``/etc/rhn/rhn.conf`` configuration file.
 ====
+
+== Salt Bundle functionality extension with PIP modules
+
+The Salt Bundle includes [literal]``PIP`` Python module to make it possible to extend the functionality of the bundled Salt Minion with extra Python modules.
+
+The default location to deploy modules on calling [command]``salt <minion_id> pip.install <module_name>`` is [path]``/var/lib/venv-salt-minion/local``.
+
+[NOTE]
+====
+In case if [path]``/var/lib/venv-salt-minion/local`` is not applicable for some reasons and the other location for the modules is required the destination path can be overridden by setting [literal]``VENV_PIP_TARGET`` environment variable for the [literal]``venv-salt-minion.service``.
+It is recommended to use systemd drop-in config file for the service. It could be done with the config file [path]``/etc/systemd/system/venv-salt-minion.service.d/10-pip-destination.conf``:
+----
+[Service]
+Environment=VENV_PIP_TARGET=/new/path/local/venv-salt-minion/pip
+----
+====
+
+[IMPORTANT]
+====
+The Salt Bundle does not maintain the modules installed with [literal]``PIP``. In case of updating the Salt Bundle it is possible that modules should be reinstalled, for example on updating the Salt Bundle with updated Python inside.
+====
