--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -99,7 +99,7 @@ Set [option]``web.ssh_use_salt_thin`` to `true` in the [path]``/etc/rhn/rhn.conf
 
 The Salt Bundle includes [literal]``PIP`` Python module to make it possible to extend the functionality of the bundled Salt Minion with extra Python modules.
 
-The default location to deploy modules on calling [command]``salt <minion_id> pip.install <module_name>`` is [path]``/var/lib/venv-salt-minion/local``.
+By default, [command]``salt <minion_id> pip.install <package-name>`` installs the Python package specified by [literal]``<package_name>`` into [path]``/var/lib/venv-salt-minion/local``.
 
 [NOTE]
 ====
